--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,34 @@
-<main class="bg-neutral-900 h-full">
-  <h1>
-    Olá, mundo
-  </h1>
+<main class="bg-neutral-900 h-full p-2 flex items-start justify-center">
+  <section class="grid grid-cols-1 md:grid-cols-2 gap-2 w-full md:max-w-96">
+  <app-card-link
+    title="About me"
+    imgSrc="./assets/joão.jpg"
+    alternativeText="Profile picture"
+    link="https://linkedin.com/in/jpastolfi"
+    ></app-card-link>
+  <app-card-link
+    title="Academic background"
+    imgSrc="./assets/learn.jpg"
+    alternativeText="Code studying picture"
+    link="https://www.betrybe.com/"
+    ></app-card-link>
+  <app-card-link
+    title="Academic background"
+    imgSrc="./assets/learn.jpg"
+    alternativeText="Code studying picture"
+    link="https://www.betrybe.com/"
+    ></app-card-link>
+  <app-card-link
+    title="Academic background"
+    imgSrc="./assets/learn.jpg"
+    alternativeText="Code studying picture"
+    link="https://www.betrybe.com/"
+    ></app-card-link>
+  <app-card-link
+    title="Academic background"
+    imgSrc="./assets/learn.jpg"
+    alternativeText="Code studying picture"
+    link="https://www.betrybe.com/"
+    ></app-card-link>
+  </section>
 </main>
